Add webapp-schulverwaltung build ad0e4961

--- a/public/apps/webapp-schulverwaltung/assets/locales/de-CH.json
+++ b/public/apps/webapp-schulverwaltung/assets/locales/de-CH.json
@@ -171,6 +171,7 @@
       "teacher": "Lehrperson",
       "date-from": "Datum von",
       "date-to": "Datum bis",
+      "weekdays": "Tag",
       "presence-type": "Grund",
       "confirmation-state": "Status",
       "incident": "Vorfall",
