Fehlende resourcen Einträge erstellt

--- a/public/apps/Raumreservation/assets/i18n/de-CH.json
+++ b/public/apps/Raumreservation/assets/i18n/de-CH.json
@@ -73,6 +73,8 @@
     "DEVICE_STATE_NO_WORKDAY": "Das Gerät kann am {{date}} nicht reserviert werden.",
     "DEVICE_STATE_OPEN_UNTIL": "Das Gerät konnte bis am {{date}} reserviert werden.",
     "DEVICE_TIMELINE_OCCUPIED": "Das Gerät ist belegt",
+    "DEVICE_TIMELINE_NOT_RESERVABLE": "Das Gerät kann nicht reserviert werden.",
+    "DEVICE_TIMELINE_CLOSED": "Das Gerät ist zu diesem Zeitpunkt nicht reservierbar.",
     "DEVICE_TYPE": "Gerätetyp",
     "DURATION_IN_H": "Dauer in Stunden",
     "EDIT_DEVICE_RESERVATION": "Gerätereservation bearbeiten",
@@ -145,6 +147,8 @@
     "RESERVATION_ICS_CREATION_FAILED": "Die .ics-Datei konnte nicht erstellt werden.",
     "RESERVATION_LOAD_FAILED": "Fehler beim Laden der Reservation {{id}}",
     "RESERVATION_NOT_FOUND": "Die Reservation mit der ID {{id}} konnte nicht gefunden werden.",
+    "RESERVATION_NOT_POSSIBLE_DATE": "{{resourceLabel}} kann am {{date}} nicht reserviert werden.",
+    "RESERVATION_NOT_POSSIBLE_TIME_AND_DATE": "{{resourceLabel}} kann von {{timeFrom}} bis {{timeTo}} am {{date}} nicht reserviert werden.",
     "RESERVATION_NOT_POSSIBLE_NOTICE_SINGLE": "{{resourceLabel}} kann von {{timeFrom}} bis {{timeTo}} nicht reserviert werden.",
     "RESERVATION_NOT_POSSIBLE_NOTICE_MULTIPLE": "{{resourceLabel}} kann nicht für alle Termine reserviert werden.",
     "RESERVATION_NOT_POSSIBLE_REASON": "Grund: Der gewünschte Zeitraum überschneidet sich mit folgenden Reservationen/Sperrzeiten",
@@ -153,6 +157,16 @@
     "RESERVATION_STATE_PAST": "Die Reservation liegt in der Vergangenheit – es können keine Änderungen vorgenommen werden.",
     "RESERVATION_STATE_READONLY": "Es können keine Änderungen vorgenommen werden.",
     "RESERVATION_TIME_FRAME_OCCUPIED": "Im angezeigten Zeitraum (5:00 - 21:59) sind keine freien Zeiten verfügbar.", 
+    "RESERVATION_BACKEND_ERR_ADDON": "Vermutlich war jemand anderes schneller...",
+    "RESSOURCE_STATE_CLOSED": "{{resourceLabel}} lässt keine Belegungen zu.",
+    "RESSOURCE_STATE_CLOSED_UNTIL": "{{resourceLabel}} ist für Belegungen gesperrt bis am {{date}}.",
+    "RESSOURCE_STATE_DATE_IN_PAST": "Das Datum {{date}} liegt in der Vergangenheit.",
+    "RESSOURCE_TIME_SLOT_IN_PAST": "Die gewählte Uhrzeit liegt in der Vergangenheit.",
+    "RESSOURCE_STATE_NO_WORKDAY": "{{resourceLabel}} ist am {{date}} geschlossen.",
+    "RESSOURCE_STATE_OPEN_UNTIL": "{{resourceLabel}} war bis am {{date}} reservierbar.",
+    "RESSOURCE_NO_PERMISSION_OCCUPY": "Die Berechtigung zur Buchung fehlt.",    
+    "RESSOURCE_PERMISSION_PROV": "Die Berechtigung zur definitiven Buchung fehlt. Sie sind jedoch berechtigt, eine provisorische Buchung zu erstellen.",
+    "RESSOURCE_PERMISSION_REQUEST": "Die Berechtigung zur Buchung fehlt. Sie sind jedoch berechtigt, eine Anfrage zu erstellen.",
     "RESULT": "Resultat",
     "REQUEST": "Anfragen",
     "ROOM": "Raum",
@@ -192,6 +206,9 @@
     "ROOM_STATE_CLOSED_UNTIL": "Der Raum ist für Reservationen bis am {{date}} gesperrt.",
     "ROOM_STATE_NO_WORKDAY": "Der Raum ist am {{date}} geschlossen.",
     "ROOM_STATE_OPEN_UNTIL": "Der Raum konnte bis am {{date}} reserviert werden.",
+    "ROOM_TIMELINE_OCCUPIED": "Der Raum ist belegt.",
+    "ROOM_TIMELINE_NOT_RESERVABLE": "Der Raum kann nicht reserviert werden.",
+    "ROOM_TIMELINE_CLOSED": "Der Raum ist geschlossen.",
     "ROOM_TYPE": "Raumtyp",
     "SAVE_AS_FAVORITE": "Suche als Favorit speichern",
     "SAVED_SEARCH_DELETE_SUCCESS": "Ihre Suche wurde gelöscht.",
@@ -219,6 +236,9 @@
     "TIMESPAN_START": "Zeit von",
     "TIMESPAN_END": "bis",
     "TIMESPAN_FREE": "Frei",
+    "TIMESPAN_REQUESTABLE": "Frei (Raumanfrage möglich)",
+    "TIMESPAN_PROVISIONALY_BOOKABLE": "Frei (provisorische Buchung möglich)",
+    "TIMESPAN_FREE_NOT_BOOKABLE": "Frei (nicht reservierbar)",
     "WEEK": "Woche",
     "WELCOME": "Willkommen",
     "YEAR_CHAR": "j",
