--- a/public/apps/Raumreservation/assets/i18n/fr-CH.json
+++ b/public/apps/Raumreservation/assets/i18n/fr-CH.json
@@ -52,6 +52,8 @@
     "DEVICE_NO_PERMISSION": "Vous n'avez pas l'autorisation d'afficher l'appareil {{id}}.",
     "DEVICE_NO_PERMISSION_OCCUPY": "Vous n'avez pas l'autorisation de réserver l'appareil.",
     "DEVICE_OCCUPANCY": "Occupation de l'appareil",
+    "DEVICE_TIMELINE_NOT_RESERVABLE": "L'appareil ne peut pas être réservé.",
+    "DEVICE_TIMELINE_CLOSED": "L'appareil n'est pas réservable à ce moment-là.",
     "DEVICE_PERMISSION_PROV": "Vous n'avez pas l'autorisation d'effectuer une réservation définitive. Vous avez toutefois l'autorisation d'effectuer une réservation provisoire.",
     "DEVICE_PERMISSION_REQUEST": "Vous n'avez pas l'autorisation d'effectuer une réservation. Vous avez toutefois l'autorisation de créer une demande.",
     "DEVICE_RESERVATIONRIGHT_HINT_BODY_221": "Vous avez l'autorisation de réserver définitivement l'appareil.",
@@ -136,10 +138,25 @@
     "RESERVATION_ICS_CREATION_FAILED": "Le fichier .ics n'a pas pu être créé.",
     "RESERVATION_LOAD_FAILED": "Erreur lors du chargement de la réservation {{id}}",
     "RESERVATION_NOT_FOUND": "La réservation avec l'ID {{id}} n'a pas pu être trouvée.",
+    "RESERVATION_NOT_POSSIBLE_DATE": "{{resourceLabel}} ne peut pas être réservé le {{date}}.",
+    "RESERVATION_NOT_POSSIBLE_TIME_AND_DATE": "{{resourceLabel}} ne peut pas être réservé de {{timeFrom}} à {{timeTo}} le {{date}}.",
     "RESERVATION_NO_PERMISSION": "Vous n'avez pas l'autorisation d'afficher la réservation {{id}}.",
     "RESERVATION_STATE_EDITABLE": "La réservation contient des dates dans le futur et peut donc encore être modifiée.",
-    "RESERVATION_STATE_PAST": "La réservation est dans le passé – aucune modification ne peut être effectuée.",
+    "RESERVATION_STATE_PAST": "La réservation est dans le passé - aucune modification ne peut être effectuée.",
     "RESERVATION_STATE_READONLY": "Aucune modification ne peut être effectuée.",
+    "RESERVATION_BACKEND_ERR_ADDON": "Vermutlich war jemand anderes schneller...",
+    "RESSOURCE_STATE_CLOSED": "{{resourceLabel}} laisse aucune réservation.",
+    "RESSOURCE_STATE_CLOSED_UNTIL": "{{resourceLabel}} est bloqué pour les réservations jusqu'au {{date}}.",
+    "RESSOURCE_STATE_DATE_IN_PAST": "La date {{date}} est dans le passé.",
+    "RESSOURCE_TIME_SLOT_IN_PAST": "L'heure sélectionnée est dans le passé.",
+    "RESSOURCE_STATE_NO_WORKDAY": "{{resourceLabel}} est fermé le {{date}}.",
+    "RESSOURCE_STATE_OPEN_UNTIL": "{{resourceLabel}} était réservable jusqu'au {{date}}.",
+    "ROOM_TIMELINE_OCCUPIED": "La salle est occupée.",
+    "ROOM_TIMELINE_NOT_RESERVABLE": "La salle ne peut pas être réservée.",
+    "ROOM_TIMELINE_CLOSED": "La salle est fermée.",
+    "RESSOURCE_NO_PERMISSION_OCCUPY": "Vous n'avez pas l'autorisation de réserver.",
+    "RESSOURCE_PERMISSION_PROV": "Vous n'avez pas l'autorisation de réserver définitivement. Vous êtes toutefois autorisé à effectuer une réservation provisoire.",
+    "RESSOURCE_PERMISSION_REQUEST": "Vous n'avez pas l'autorisation de réserver. Vous êtes toutefois autorisé à effectuer une demande.",
     "RESULT": "Résultat",
     "ROOM": "Salle",
     "ROOMNUMBER": "Salle",
